--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,23 @@
 									<option>XXL</option>
 								</select>
 							</form>
+							<a href="#" class="size_link">Определить размер</a>
+						</div>
+						<div class="basket_line">
+							<div class="numb">
+								<span class="minus ">+</span>
+								<input type="text" value="1" placeholder="">
+								<span class="plus ">-</span>
+							</div>
+							<button class="basket_link_btn btn">Добавить в корзину</button>
+							<a href="#" class="like_link"><span class="icon-like like_link1"></span><span class="icon-hard like_link2"></span></a>
+						</div>
+						<a href="#" class="buy_link">Купить в 1 клик</a>
+						<hr/>
+						<div class="card_infolinks">
+							<div class="card_infolinks_link"><span class="icon-desico card_infolinks_link_ico"></span><a href="#">Описание товара</a></div>
+							<div class="card_infolinks_link"><span class="icon-time card_infolinks_link_ico"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span><a href="#">Доставка и возврат</a></div>
+							<div class="card_infolinks_link"><span class="icon-card card_infolinks_link_ico"></span><a href="#">Способы оплаты</a></div>
 						</div>
 					</div>
 				</div>
