--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,8 @@
 					<div class="card_des">
 						<h1>Пижама для девочек</h1>
 						<div class="articl">Арт. 02765/46</div>
-						<div class="review_line">Отзывы <div class="review_stras"><span class="icon-fullstar"></span><span class="icon-fullstar"></span><span class="icon-fullstar"></span><span class="icon-fullstar"></span><span class="icon-star"></span></div> 14 отзывов<a href="#" class="arrow_link"></a></div>
-						<div class="price">800 ₽ <div class="price_old">1 500 ₽</div><a href="#" class="arrow_link"></a></div>
+						<div class="review_line">Отзывы <div class="review_stras"><span class="icon-fullstar"></span><span class="icon-fullstar"></span><span class="icon-fullstar"></span><span class="icon-fullstar"></span><span class="icon-star"></span></div> 14 отзывов<a href="#" class="arrow_link"><img src="svg/arr.svg" alt=""/></a></div>
+						<div class="price">800 ₽ <div class="price_old">1 500 ₽</div><a href="#" class="arrow_link"><img src="svg/arr.svg" alt=""/></a></div>
 						<div class="discont">
 							<div class="discont_block">скидка -36%</div>
 							<div class="discont_block">акция -20%</div>
@@ -75,6 +75,71 @@
 							<div class="card_infolinks_link"><span class="icon-desico card_infolinks_link_ico"></span><a href="#">Описание товара</a></div>
 							<div class="card_infolinks_link"><span class="icon-time card_infolinks_link_ico"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span><a href="#">Доставка и возврат</a></div>
 							<div class="card_infolinks_link"><span class="icon-card card_infolinks_link_ico"></span><a href="#">Способы оплаты</a></div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="section_gallery">
+				<div class="wrapper">
+					<div class="g_link">
+						<a href="#">Посмотреть все стили</a>
+					</div>
+					<div class="gallery">
+						<div class="gallery_item gallery_item1">
+							<div class="gallery_img"><img data-src="img/img7.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACw=" class="js-img" alt=""></div>
+							<div class="gallery_item_in">
+								<a href="#" class="copy_link"><span class="icon-ico1"></span></a>
+								<a href="#" class="gallery_item_more">
+									<span class="icon-bascet gallery_item_more_ico"></span>
+									<span class="gallery_item_more_txt">Узнай, что на мне</span>
+								</a>
+								<div class="gallery_item_like"><span class="icon-hard"></span> 200</div>
+							</div>
+
+						</div>
+						<div class="gallery_item gallery_item2">
+							<div class="gallery_img"><img data-src="img/img8.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACw=" class="js-img" alt=""></div>
+							<div class="gallery_item_in">
+								<a href="#" class="copy_link"><span class="icon-ico1"></span></a>
+								<a href="#" class="gallery_item_more">
+									<span class="icon-bascet gallery_item_more_ico"></span>
+									<span class="gallery_item_more_txt">Узнай, что на мне</span>
+								</a>
+								<div class="gallery_item_like"><span class="icon-hard"></span> 200</div>
+							</div>
+						</div>
+						<div class="gallery_item gallery_item3">
+							<div class="gallery_img"><img data-src="img/img9.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACw=" class="js-img" alt=""></div>
+							<div class="gallery_item_in">
+								<a href="#" class="copy_link"><span class="icon-ico1"></span></a>
+								<a href="#" class="gallery_item_more">
+									<span class="icon-bascet gallery_item_more_ico"></span>
+									<span class="gallery_item_more_txt">Узнай, что на мне</span>
+								</a>
+								<div class="gallery_item_like"><span class="icon-hard"></span> 200</div>
+							</div>
+						</div>
+						<div class="gallery_item gallery_item4">
+							<div class="gallery_img"><img data-src="img/img10.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACw=" class="js-img" alt=""></div>
+							<div class="gallery_item_in">
+								<a href="#" class="copy_link"><span class="icon-ico1"></span></a>
+								<a href="#" class="gallery_item_more">
+									<span class="icon-bascet gallery_item_more_ico"></span>
+									<span class="gallery_item_more_txt">Узнай, что на мне</span>
+								</a>
+								<div class="gallery_item_like"><span class="icon-hard"></span> 200</div>
+							</div>
+						</div>
+						<div class="gallery_item gallery_item5">
+							<div class="gallery_img"><img data-src="img/img11.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACw=" class="js-img" alt=""></div>
+							<div class="gallery_item_in">
+								<a href="#" class="copy_link"><span class="icon-ico1"></span></a>
+								<a href="#" class="gallery_item_more">
+									<span class="icon-bascet gallery_item_more_ico"></span>
+									<span class="gallery_item_more_txt">Узнай, что на мне</span>
+								</a>
+								<div class="gallery_item_like"><span class="icon-hard"></span> 200</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -120,9 +185,9 @@
 				</div>
 				<div class="footer_new">
 					<h4>Узнайте первыми о новинках и акциях</h4>
-					<form class="fnew_form" id="#form">
+					<form class="fnew_form" id="form">
 						<div class="fnew_form_inp">
-							<input type="email" class="t-inp" placeholder="Адрес электронной почты"/>
+							<input type="email" class="t-inp" name="email" placeholder="Адрес электронной почты"/>
 							<a href="#" class="t-inp_close"></a>
 						</div>
 						<input type="submit" class="form_submit" value="Подписаться"/>
@@ -135,9 +200,9 @@
 <div class="icon-load"></div>	
 <!-- BODY EOF   -->
 	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/components/jquery.validate.min.js"></script>
 	<script src="js/components/slick.js"></script>
 	<script src="js/components/jquery.formstyler.js"></script>
+	<script src="js/components/jquery.validate.min.js"></script>
 	<script src="js/custom.js"></script>
 </body>
 </html>
